minor style adjustments

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -100,7 +100,7 @@ body, html
   z-index: 100
   text-align: center
   width: 100%
-  padding: .2rem .3rem
+  padding: .2rem 3rem
   white-space: nowrap
   color: white
 
@@ -146,7 +146,7 @@ body, html
 .container-head
   background: $dark-grey
   color: white
-  padding: 3rem
+  padding-top: 2.5rem
 
 .container-page
   margin-bottom: 4rem
@@ -212,6 +212,7 @@ span.version
 
 .pager-example
   margin-bottom: 2.1rem
+  white-space: nowrap
   .paginate-info
     margin-top: -10px
 
