added pagy-extras: - replaced docs/assets files with symlink to public/assets - fixes

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -363,3 +363,12 @@ div.card-body th
 
   .no-flex nav.pagination
     display: block
+
+.pagy-nav-bootstrap-compact a, .pagy-nav-bootstrap-compact button
+  @extend .btn-sm
+
+#responsive-extra ul.pagination
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15)
+
+#compact-extra div.btn-group
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)
