--- a/app/views/comparison/gems.html.slim
+++ b/app/views/comparison/gems.html.slim
@@ -68,7 +68,7 @@
 
 #links.footer
   = link_to "Home", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/", class: 'fas fa-home'
-  = link_to "Pagy Comparisons", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/pagy.html?page=20",  class: 'fas fa-balance-scale'
+  = link_to "Pagy Comparisons", "/pagy.html?page=20",  class: 'fas fa-balance-scale'
 
 javascript:
   // https://stackoverflow.com/questions/25523294/best-practice-for-responsive-google-charts
