--- a/app/views/comparison/index.html.slim
+++ b/app/views/comparison/index.html.slim
@@ -23,9 +23,9 @@ javascript:
       h3 Same output... different performance
 
     #compare.row.justify-content-center
-      = link_to "Compare", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/gems.html?page=20", class: 'fas fa-balance-scale'
+      = link_to "Compare", "/gems.html?page=20", class: 'fas fa-balance-scale'
 
 
 #links.footer
-  = link_to "Gems Comparison", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/gems.html?page=20", class: 'fas fa-gem'
-  = link_to "Pagy Comparisons", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/pagy.html?page=20", class: 'fas fa-balance-scale'
+  = link_to "Gems Comparison", "/gems.html?page=20", class: 'fas fa-gem'
+  = link_to "Pagy Comparisons", "/pagy.html?page=20", class: 'fas fa-balance-scale'
