updated to pagy 0.8.5

--- a/app/views/comparison/_gems1.html.slim
+++ b/app/views/comparison/_gems1.html.slim
@@ -17,7 +17,7 @@
     p Less code to perform the same task usually means less complexity and more efficiency, and understanding 10 lines of code is obviously easier than understanding 100 lines, so in the end the Code Size is also a good factor to evaluate a gem.
     p
       = icon('fas', 'info-circle')
-      i  To be fair with all gems, we removed the generator-related files from Kaminari, and added the lines of ERB templates it uses. We also added the <b>bootstrap</b> extra from the <b>pagy-ext</b> gem, needed to render the same bootstrap pagination as the other gems.
+      i  To be fair with all gems, we removed the generator-related files from Kaminari, and added the lines of ERB templates it uses. We also added the pagy <b>bootstrap</b> extra, needed to render the same bootstrap pagination of the other gems.
 
 
   = render 'shared/details', id: :loc do
