squashed update to pagy 2.0 and a few additions

--- a/app/views/comparison/_gems1.html.slim
+++ b/app/views/comparison/_gems1.html.slim
@@ -55,7 +55,7 @@
 
     p
       = icon('fas', 'info-circle')
-      i  To be fair with all gems, we added the <b>pagy_nav_bootstrap</b> method needed to render the same bootstrap pagination as the other gems.
+      i  To be fair with all gems, we added the <b>pagy_bootstrap_nav</b> method needed to render the same bootstrap pagination as the other gems.
 
 
   = render 'shared/details', id: :code do
