--- a/app/views/comparison/gems.html.slim
+++ b/app/views/comparison/gems.html.slim
@@ -13,7 +13,7 @@
         h4.subtitle
           | Pagy
           span.version  v#{Pagy::VERSION}
-        == pagy_nav_bootstrap(@pagy)
+        == pagy_bootstrap_nav(@pagy)
         .paginate-info
           == pagy_info(@pagy)
 
