changes for materialize

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,7 +1,10 @@
+//= require material_icons
+
 /* https://github.com/twbs/bootstrap-rubygem */
 @import "font-awesome-sprockets"
 @import "font-awesome"
-@import "bootstrap"
+//@import "bootstrap"
+@import "materialize"
 
 @import "github_corner"
 @import "main"
