--- a/app/views/comparison/pagy.html.slim
+++ b/app/views/comparison/pagy.html.slim
@@ -1,124 +1,43 @@
-= render 'shared/reload_warning', hidden: true
-
 .container-head
 
   .container
 
     .page-title.fas.fa-balance-scale
-      = @title = 'Pagy Comparisons'
+      = @title = 'Pagy Materialize Extra'
 
     .subsection
 
-      p In this page we show and/or compare different aspects of the Pagy gem:
-
-      ul
-        li Helpers
-        li Templates
-        li
-          | (your) Custom Templates
-        li Other Methods (benchmarks and profiles)
-
-      p You can use this page to inspect the commented source, and make decision about using one method or another, based on Benchmarks and Memory allocation.
+      p This page shows the helpers of the materialize extra. You must use the materialize branch in order to use the extra (since the gems are different)
 
 .container.container-page
 
   = render 'shared/github'
 
-  = render 'shared/redirected_notice'
-
-  - unless Rails.env.production?
-    = render 'shared/env_warning'
-
   #pagy-nav
 
-    h3.title.fas.fa-code Pagy Helpers
+    h3.title.fas.fa-code Materialize extra Helpers
 
     .scrollable-section
       .pagy-nav
-        .capt pagy_nav
-        .no-flex.pager-example
-          == wrap_nav "pagy_nav helper"
-            == pagy_nav(@pagy)
-
-    .scrollable-section
-      .pagy-nav
-        .capt pagy_nav_bootstrap
+        .capt pagy_nav_materialize
         .pager-example
-          == wrap_nav "pagy_nav_bootstrap helper"
-            == pagy_nav_bootstrap(@pagy)
-
-    h3.title.fas.fa-code Pagy Responsive Helpers
+          == wrap_nav "pagy_nav_materialize helper"
+            == pagy_nav_materialize(@pagy)
 
     p Resize the windodw to get different quantities of pages shown...
 
     .pagy-nav
-      .capt pagy_nav_responsive
-      .no-flex.pager-example
-        == wrap_nav "pagy_nav_responsive helper"
-          == pagy_nav_responsive(@pagy)
-
-    .pagy-nav
-      .capt pagy_nav_responsive_bootstrap
+      .capt pagy_nav_responsive_materialize
       .pager-example
-        == wrap_nav "pagy_nav_responsive_bootstrap helper"
-          == pagy_nav_responsive_bootstrap(@pagy)
-
-    h3.title.fas.fa-code Pagy Compact Helpers
+        == wrap_nav "pagy_nav_responsive_materialize helper"
+          == pagy_nav_responsive_materialize(@pagy)
 
     .pagy-nav
-      .capt pagy_nav_compact
-      .no-flex.pager-example
-        == wrap_nav "pagy_nav_compact helper"
-          == pagy_nav_compact(@pagy)
-
-    .pagy-nav
-      .capt pagy_nav_compact_bootstrap
+      .capt pagy_nav_compact_materialize
       .pager-example
-        == wrap_nav "pagy_nav_compact_bootstrap helper"
-          == pagy_nav_compact_bootstrap(@pagy)
+        == wrap_nav "pagy_nav_compact_materialize helper"
+          == pagy_nav_compact_materialize(@pagy)
 
-
-    / h3.title.fas.fa-code Pagy Items Selector Helper
-    /
-    / .pagy-nav
-    /   .capt pagy_items_selector
-    /   .no-flex.pager-example
-    /     == wrap_nav "pagy_items_selector helper"
-    /       == pagy_items_selector(@pagy)
-    /
-
-    h3.title.fas.fa-file-code Pagy Templates
-
-
-    - %w[/nav. nav_bootstrap.].each do |n|
-      - Pagy.root.join('templates').each_child.sort.each do |t|
-        - next unless t.to_s.include?(n)
-        .scrollable-section
-          .pagy-nav
-            .capt title=t = t.basename
-            .no-flex.pager-example
-              == wrap_nav "template #{t}"
-                == render file: t, locals: { pagy: @pagy }
-
-    / h3.title.fas.fa-file-code Custom Templates
-    /
-    / .scrollable-section
-    /   - if Rails.root.join('app', 'views', 'pagy').entries.size > 2
-    /     - Rails.root.join('app', 'views', 'pagy').each_child.sort.each do |t|
-    /       .pagy-nav
-    /         .capt title=t = t.basename
-    /         .no-flex.pager-example
-    /           == wrap_nav "template #{t}"
-    /             == render file: t, locals: { pagy: @pagy }
-    /   - else
-    /     .pagy-nav
-    /       p You can try your custom templates by adding them to the <code>app/views/pagy</code> dir and reload this page.
-
-
-  h2.title.fas.fa-balance-scale Comparisons
-
-  #pagy1.step
-    = render 'shared/step', path: :pagy1, link_text: "Click to run the  Comparison Benchmarks..."
 
 #links.footer
   = link_to "Home", "#{ENV['RAILS_RELATIVE_URL_ROOT']}/", class: 'fas fa-home'
