Fix typo: unespected -> unexpected

--- a/app/views/comparison/_gems2.html.slim
+++ b/app/views/comparison/_gems2.html.slim
@@ -6,7 +6,7 @@
     .graph-container.col-md-10.col-lg-8
       #ips-chart.chart
   .comments
-    p This is probably the most important and certainly the most striking comparison, but the result is not completely unespected. Indeed, the poor performance of Will Paginate and Kaminari is also a consequence of the waste of objects shown in the previous chart. Besides - being small and easy to manage - Pagy has been optimized for performance almost line by line.
+    p This is probably the most important and certainly the most striking comparison, but the result is not completely unexpected. Indeed, the poor performance of Will Paginate and Kaminari is also a consequence of the waste of objects shown in the previous chart. Besides - being small and easy to manage - Pagy has been optimized for performance almost line by line.
 
   = render 'shared/details', id: :ips  do
     table
