--- a/app/views/comparison/responsive_screencast.html.slim
+++ b/app/views/comparison/responsive_screencast.html.slim
@@ -1,4 +1,4 @@
-- @title = 'Pagy Responsive Extra'
+- @title = 'Pagy Javascript Nav'
 
 div  style="display: flex; height: 90px; align-items: center; justify-content: center;"
-  == pagy_bootstrap_responsive_nav(@pagy)
+  == pagy_bootstrap_nav_js(@pagy)
